CDC and all smart connect partner connections work.
